<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="10" 
    android:rowCount="6">
     <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/one" 
	        android:onClick="1"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/two" 
	        android:onClick="2"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/three" 
	        android:onClick="3"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/four" 
	        android:onClick="4"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/five" 
	        android:onClick="5"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/six" 
	        android:onClick="6"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/seven" 
	        android:onClick="7"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/eight" 
	        android:onClick="8"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/nine" 
	        android:onClick="9"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/zero" 
	        android:onClick="0"/> 
	  
    
        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/Q" 
	        android:onClick="q"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/W" 
	        android:onClick="w"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/E" 
	        android:onClick="e"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/R" 
	        android:onClick="r"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/T" 
	        android:onClick="t"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/Y" 
	        android:onClick="y"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/U" 
	        android:onClick="u"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/I" 
	        android:onClick="i"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/O" 
	        android:onClick="o"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/P" 
	        android:onClick="p"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/A" 
	        android:onClick="a"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/S" 
	        android:onClick="s"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/D" 
	        android:onClick="d"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/F" 
	        android:onClick="f"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/G" 
	        android:onClick="g"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/H" 
	        android:onClick="h"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/J" 
	        android:onClick="j"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/K" 
	        android:onClick="k"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/L" 
	        android:onClick="l"/> 
	       
			<Space
	           android:layout_column="9"
	           android:layout_gravity="left|top"
	           android:layout_row="3" />	
	           <Space
	           android:layout_column="1"
	           android:layout_gravity="left|top"
	           android:layout_row="4" />        
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/Z" 
	        android:onClick="z"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/X" 
	        android:onClick="x"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/C" 
	        android:onClick="c"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/V" 
	        android:onClick="v"/>
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/B" 
	        android:onClick="B"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/N" 
	        android:onClick="n"/> 
	        <Button 
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/M" 
	        android:onClick="m"/>

	       

	      
</GridLayout>